--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Renovate Bot <bot@renovateapp.com>
 Tane Morgan <464864+tanem@users.noreply.github.com>
+dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
