--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 Renovate Bot <bot@renovateapp.com>
 Tane Morgan <464864+tanem@users.noreply.github.com>
 dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
+mir3z <that.mirz@gmail.com>
 renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
